# FINEART

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  run_all.sh
include/: bounding_box.hpp  camera.hpp  group.hpp  hit.hpp  image.hpp  light.hpp  material.hpp  medium.hpp  mesh.hpp  object3d.hpp  path_tracer.hpp  path_tracing.hpp  plane.hpp  random.hpp  ray.hpp  scene.hpp  scene_parser.hpp  sphere.hpp  texture.hpp  tiny_obj_loader.hpp  transform.hpp  triangle.hpp  utils.hpp
include/group/: basic_group.hpp  group.hpp  kd_tree.hpp
include/object/: mesh.hpp  object3d.hpp  plane.hpp  sphere.hpp
include/scene/: all_scenes.hpp  build.sh  common_resources.hpp  dragon_in_box.hpp  dragon_in_box.scene  dragon_under_distantlight.scene  dragon_under_spotlight.scene  earth_in_box.hpp  earth_in_box.scene  girl_in_box.hpp  girl_in_box.scene  glass.hpp  glass_in_box.hpp  glass_in_box.scene  glass_room.scene  great_white.scene  hms.scene  hms_bak.scene  hms_sunset.scene  house.hpp  house.scene  island.scene  lighthouse.scene  ocean.scene  pool.scene  simple_room.scene  sphere_in_box.hpp  sphere_in_box.scene  sphere_under_spotlight.scene  steampunk.hpp  tree.scene
mesh/: glass-room.mtl  house.mtl  simple-room.mtl  tree.mtl
src/: image.cpp  kd_tree.cpp  main.cpp  merge.cpp  mesh.cpp  path_tracer.cpp  path_tracing.cpp  scene.cpp  scene_parser.cpp  utils.cpp
testcases/: earth.txt  scene01_basic.txt  scene01_basic_bak.txt
texture/: earth.tga  marble.tga  wood.tga
