cmake_minimum_required(VERSION 3.1)
project(BINART CXX)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wno-deprecated-copy -Wno-sign-compare")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

add_subdirectory(deps/vecmath)

set(BINART_SOURCES
        src/main.cpp
        src/mesh.cpp
        src/kd_tree.cpp
        src/path_tracer.cpp
        src/scene.cpp)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

add_executable(${PROJECT_NAME} ${BINART_SOURCES})
target_link_libraries(${PROJECT_NAME} PRIVATE vecmath)
target_include_directories(${PROJECT_NAME} PRIVATE include)

find_package(OpenMP REQUIRED)
target_link_libraries(${PROJECT_NAME} PUBLIC OpenMP::OpenMP_CXX)

find_package(PNG REQUIRED)
target_link_libraries(${PROJECT_NAME} PUBLIC ${PNG_LIBRARY})
